<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/intro_background"
    android:padding="20dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:background="#000000"
        android:textColor="#F44336"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:textSize="14sp"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:textAlignment="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAlignment="center"
            app:srcCompat="@drawable/github" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/linkgithub"
            android:textAlignment="viewStart"
            android:textColor="#45129F"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewEmail"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="2dp"
        android:layout_marginTop="10dp"
        android:text="@string/dev_mail"
        android:textColor="#673AB7"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/client_build_version" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="@string/app_version"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/buttonPerms"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            app:srcCompat="@drawable/gear_settings" />
    </LinearLayout>

</LinearLayout>