<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".Permission">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_permission0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/textViewOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Opzioni avanzate"
                android:textColor="#673AB7"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_permission1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="5dp">

            <Switch
                android:id="@+id/switch4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:onClick="openStartOnBoot"
                android:text="@string/startup_service"
                android:textColor="@color/normalText" />

            <Switch
                android:id="@+id/switch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:onClick="removeBatteryLimitations"
                android:text="@string/battery_limitation" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/hide_app"
                android:textColor="@color/normalText"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/switch2"
                android:onClick="lockScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_psw"
                android:textColor="@color/normalText"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>