<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".InfoActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_info_download_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/textViewOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dnw_links"
                android:textColor="#673AB7"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_info_download_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button3"
                android:text="@string/linkgithub"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_button3"
                android:text="@string/app_name"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>